# sirs_import

./: .gitignore  MANIFEST.in  README.en.md  README.md  README_PYPI.md  config_sirs.example.toml  couchdb.py  pyproject.toml
.github/workflows/: deploy-coverage.yml  python-package.yml  python_CI.yml
sirs_import/: __init__.py  __main__.py  check_dates.py  config_defaults.py  config_loader.py  config_sirs.example.toml  diag_des.py  diag_obs.py  diag_pho.py  exceptions.py  helpers.py  json_builder.py  relocate.py
tests/: conftest.py  test_basic.py  test_photo_migration_duplications.py  test_photo_migration_integration.py  test_photo_migration_unit.py
