[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sirs_import"
version = "0.1.1"
description = "Importation GPKG → SIRS (désordres, observations, photos)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-NC-ND-4.0" }
authors = [{name = "TechCabbalr"}]

dependencies = [
    "pandas",
    "fiona",
    "shapely",
    "requests",
    "wcwidth",
    "tomli; python_version < '3.11'",
]

[tool.setuptools]
packages = ["sirs_import"]

[tool.setuptools.package-data]
sirs_import = ["config_sirs.example.toml"]

[project.scripts]
sirs_import = "sirs_import.__main__:main"

