[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sirs_import"
version = "0.1.3"
description = "Importation GPKG → SIRS (désordres, observations, photos)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-NC-ND-4.0" }
authors = [{name = "TechCabbalr"}]

dependencies = [
    "pandas",
    "geopandas",
    "fiona",
    "shapely",
    "requests",
    "wcwidth",
    "tomli; python_version < '3.11'",
    "numpy<2"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sirs_import = ["config_sirs.example.toml"]

[project.scripts]
sirs_import = "sirs_import.__main__:main"

