[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sirs_import"
version = "0.4.6"
description = "Importation GPKG → SIRS (désordres, observations, photos)"
readme = "README_PYPI.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "Julien Lorion" }]
dependencies = [
    "pandas",
    "geopandas",
    "fiona",
    "shapely",
    "requests",
    "wcwidth",
    "tomli; python_version < '3.11'",
    "numpy<2",
    "numexpr>=2.8.4",
    "bottleneck>=1.3.6"
]

[project.scripts]
sirs_import = "sirs_import.__main__:main"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sirs_import = ["config_sirs.example.toml"]
